--- a/style.css
+++ b/style.css
@@ -25,12 +25,14 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
+    padding: 16px;
+    gap: 1rem;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 0.625rem;
     justify-content: center;
 }
 
@@ -43,11 +45,11 @@ body {
     box-shadow: 5px 5px rgba(0, 0, 0, 1);
     display: flex;
     flex-direction: column;
-    gap: 22px;
+    gap: 1.375rem;
 }
 
 .blog-page .blog-image {
-    width: 100%;
+    max-width: 100%;
     text-align: center;
     border-radius: 10px;
 }
@@ -108,12 +110,14 @@ body {
 
 @media screen and (min-width: 375px) {
     .blog-page {
-        width: 315px;    
+        width: 19.6875rem;
+        max-width: 20rem;    
     }
 }
 
 @media screen and (min-width: 1440px) {
     .blog-page {
-        width: 370px;    
+        width: 23.125rem;    
+        max-width: 30rem;
     }
 }
