--- a/style.css
+++ b/style.css
@@ -110,8 +110,8 @@ body {
 
 @media screen and (min-width: 375px) {
     .blog-page {
-        width: 19.6875rem;
-        max-width: 20rem;    
+        width: 360px;
+        max-width: 25rem;
     }
 }
 
